# qingmemo

./: .gitattributes  .gitignore  DESIGN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos.yml  build-release.yml
src/: App.tsx  app-model.test.ts  app-model.ts  app-toast.test.ts  index.css  index.html  insight-actions.test.ts  insight-actions.ts  main.js  note-intelligence.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  app.rs  lib.rs  main.rs  reminder.rs  store.rs
src-tauri/tests/: reminder_tests.rs  store_tests.rs
src/constants/: aiPrompts.test.ts  aiPrompts.ts
src/features/actions/: FloatingActionBar.tsx
src/features/daily-loop/: DailyBrief.tsx
src/features/help/: ShortcutHelp.tsx
src/features/motion/: motion-mode.test.ts  motion-mode.ts
src/features/progress/: BattleArchive.test.tsx  BattleArchive.tsx  BattleVictoryOverlay.tsx  celebration.ts  progress-model.test.ts  progress-model.ts
src/features/reminders/: reminder-groups.test.ts  reminder-groups.ts  reminder-status.test.ts  reminder-status.ts
src/features/sticky-wall/: StickyWall.test.tsx  StickyWall.tsx  layout.test.ts  layout.ts  note-labels.test.ts  note-labels.ts  types.ts  wall-filter.test.ts  wall-filter.ts
src/stores/: progressStore.test.ts  progressStore.ts
src/theme/: ThemeContext.tsx  theme-system.test.ts  theme-system.ts
