[package]
name = "qingmemo-win"
version = "0.1.1"
description = "Windows-first lightweight memo reminder"
authors = ["QingMemo"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "qingmemo_win_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

